--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.11.10",
     "@studio-freight/react-lenis": "^0.0.47",
+    "axios": "^1.7.8",
     "graphql": "^16.9.0",
     "motion": "^11.11.17",
     "next": "14.2.18",
